# profiler

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  LICENSE.mit  README.md  build.rs
benches/: easy.rs  macos_kperf.rs  macro_extended.rs  tracing.rs  typed_fibonacci.rs
examples/: demo.rs  fibonacy.rs  macro_extended.rs  tracing.rs  typed_fibonacci.rs
profiler_macros/: Cargo.toml
profiler_macros/src/: lib.rs
src/: bench.rs  bench_helper.rs  example.rs  expanded_macro.rs  lib.rs  metrics.rs  report.rs
src/bench/: default_metrics.rs  helpers.rs  mod.rs
src/bench/report/: json.rs  mod.rs  plan.txt
src/metrics/: kperf_impl.rs  mem.rs  mod.rs  perf.rs  rusage.rs  system.rs
