[workspace]
members = ["profiler_macros"]
resolver = "3"

[package]
name = "profiler"
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Multi-span metrics based profiler and benchmarking library for Rust"
repository = "https://github.com/vldm/profiler"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = "0.3"
profiler_macros = { version = "0.1.2", path = "profiler_macros" }
thread_local = "1.1.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

core_affinity = "0.8.3"

libc = { version = "0.2.183", optional = true }
kperf = { version = "0.1.0", optional = true }
perf-event = { version = "0.4.9", optional = true }
[features]
default = ["kperf"]
# rusage
libc = ["dep:libc"]
perf_event = ["dep:perf-event"]
kperf = ["dep:kperf"]

[[bench]]
name = "easy"
harness = false

[[bench]]
name = "tracing"
harness = false

[[bench]]
name = "macro_extended"
harness = false

[[bench]]
name = "macos_kperf"
harness = false

[[bench]]
name = "typed_fibonacci"
harness = false
