[package]
name = "profiler_macros"
version = "0.1.3"
edition = "2021"
description = "Procedural macros for the profiler crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vldm/profiler"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
